@@ -24,6 +24,7 @@ import org.hyperledger.besu.config.GenesisConfigOptions;
 import org.hyperledger.besu.config.JsonBftConfigOptions;
 import org.hyperledger.besu.config.TransitionsConfigOptions;
 import org.hyperledger.besu.consensus.common.ForkSpec;
+import org.hyperledger.besu.consensus.common.ForksSchedule;
 import org.hyperledger.besu.datatypes.Address;
 import org.hyperledger.besu.datatypes.Wei;
 import org.hyperledger.besu.ethereum.core.BlockHeader;
@@ -34,7 +35,6 @@ import org.hyperledger.besu.ethereum.mainnet.ProtocolSpec;
 import org.hyperledger.besu.evm.internal.EvmConfiguration;
 
 import java.math.BigInteger;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Supplier;
@@ -59,7 +59,7 @@ public class BaseBftProtocolScheduleTest {
     when(genesisConfig.getBftConfigOptions()).thenReturn(configOptions);
 
     final ProtocolSchedule schedule =
-        createProtocolSchedule(new ForkSpec<>(0, configOptions), Collections.emptyList());
+        createProtocolSchedule(List.of(new ForkSpec<>(0, configOptions)));
     final ProtocolSpec spec = schedule.getByBlockNumber(1);
 
     assertThat(spec.getBlockReward()).isEqualTo(Wei.of(arbitraryBlockReward));
@@ -76,8 +76,7 @@ public class BaseBftProtocolScheduleTest {
     when(configOptions.getEpochLength()).thenReturn(3000L);
     when(configOptions.getBlockRewardWei()).thenReturn(BigInteger.ZERO);
     when(genesisConfig.getTransitions()).thenReturn(TransitionsConfigOptions.DEFAULT);
-    assertThatThrownBy(
-            () -> createProtocolSchedule(new ForkSpec<>(0, configOptions), Collections.emptyList()))
+    assertThatThrownBy(() -> createProtocolSchedule(List.of(new ForkSpec<>(0, configOptions))))
         .isInstanceOf(IllegalArgumentException.class)
         .hasMessage("Mining beneficiary in config is not a valid ethereum address");
   }
@@ -93,7 +92,7 @@ public class BaseBftProtocolScheduleTest {
     when(genesisConfig.getTransitions()).thenReturn(TransitionsConfigOptions.DEFAULT);
 
     final ProtocolSchedule schedule =
-        createProtocolSchedule(new ForkSpec<>(0, configOptions), Collections.emptyList());
+        createProtocolSchedule(List.of(new ForkSpec<>(0, configOptions)));
     final ProtocolSpec spec = schedule.getByBlockNumber(1);
 
     final Address headerCoinbase = Address.fromHexString("0x123");
@@ -115,8 +114,7 @@ public class BaseBftProtocolScheduleTest {
     when(genesisConfig.getBftConfigOptions()).thenReturn(configOptions);
     when(genesisConfig.getTransitions()).thenReturn(TransitionsConfigOptions.DEFAULT);
 
-    assertThatThrownBy(
-            () -> createProtocolSchedule(new ForkSpec<>(0, configOptions), Collections.emptyList()))
+    assertThatThrownBy(() -> createProtocolSchedule(List.of(new ForkSpec<>(0, configOptions))))
         .isInstanceOf(IllegalArgumentException.class)
         .hasMessage("Bft Block reward in config cannot be negative");
   }
@@ -131,8 +129,7 @@ public class BaseBftProtocolScheduleTest {
     when(genesisConfig.getBftConfigOptions()).thenReturn(configOptions);
     when(genesisConfig.getTransitions()).thenReturn(TransitionsConfigOptions.DEFAULT);
 
-    assertThatThrownBy(
-            () -> createProtocolSchedule(new ForkSpec<>(0, configOptions), Collections.emptyList()))
+    assertThatThrownBy(() -> createProtocolSchedule(List.of(new ForkSpec<>(0, configOptions))))
         .isInstanceOf(IllegalArgumentException.class)
         .hasMessage("Epoch length in config must be greater than zero");
   }
@@ -147,8 +144,7 @@ public class BaseBftProtocolScheduleTest {
     when(genesisConfig.getBftConfigOptions()).thenReturn(configOptions);
     when(genesisConfig.getTransitions()).thenReturn(TransitionsConfigOptions.DEFAULT);
 
-    assertThatThrownBy(
-            () -> createProtocolSchedule(new ForkSpec<>(0, configOptions), Collections.emptyList()))
+    assertThatThrownBy(() -> createProtocolSchedule(List.of(new ForkSpec<>(0, configOptions))))
         .isInstanceOf(IllegalArgumentException.class)
         .hasMessage("Epoch length in config must be greater than zero");
   }
@@ -172,8 +168,9 @@ public class BaseBftProtocolScheduleTest {
 
     final ProtocolSchedule schedule =
         createProtocolSchedule(
-            new ForkSpec<>(0, configOptions),
-            List.of(new ForkSpec<>(transitionBlock, blockRewardTransition)));
+            List.of(
+                new ForkSpec<>(0, configOptions),
+                new ForkSpec<>(transitionBlock, blockRewardTransition)));
 
     assertThat(schedule.streamMilestoneBlocks().count()).isEqualTo(2);
     assertThat(schedule.getByBlockNumber(0).getBlockReward())
@@ -182,8 +179,7 @@ public class BaseBftProtocolScheduleTest {
         .isEqualTo(Wei.of(forkBlockReward));
   }
 
-  private ProtocolSchedule createProtocolSchedule(
-      final ForkSpec<BftConfigOptions> genesisFork, final List<ForkSpec<BftConfigOptions>> forks) {
+  private ProtocolSchedule createProtocolSchedule(final List<ForkSpec<BftConfigOptions>> forks) {
     final BaseBftProtocolSchedule bftProtocolSchedule =
         new BaseBftProtocolSchedule() {
           @Override
@@ -194,7 +190,7 @@ public class BaseBftProtocolScheduleTest {
         };
     return bftProtocolSchedule.createProtocolSchedule(
         genesisConfig,
-        new BftForksSchedule<>(genesisFork, forks),
+        new ForksSchedule<>(forks),
         PrivacyParameters.DEFAULT,
         false,
         bftExtraDataCodec,
